fix padding on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -114,7 +114,7 @@
   }
 
   .mainHeading {
-    left: 40px
+    left: 67px
   }
 
   .sectionHeading {
@@ -126,6 +126,6 @@
   }
 
   .section {
-    padding: 0 0.5rem;
+    padding: 0 35px;
   }
 }
